Added On prem load test

--- a/Fabrikam.LoadTest/Fabrikam.LoadTest.csproj
+++ b/Fabrikam.LoadTest/Fabrikam.LoadTest.csproj
@@ -64,6 +64,9 @@
     <None Include="FabrikamCloudLoad1.loadtest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="LoadOnPrem.loadtest">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
